--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,36 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <selenium.version>4.38.0</selenium.version>
     </properties>
 
-    <!-- pom.xml -->
     <dependencies>
+        <!-- POI уже есть -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>5.4.1</version>
+        </dependency>
+
+        <!-- Selenium (ядро + менеджер драйверов) -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>${selenium.version}</version>
+        </dependency>
+
+        <!-- DevTools строго под Chrome 141 (совпадает с версией твоего браузера) -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-devtools-v141</artifactId>
+            <version>${selenium.version}</version>
+        </dependency>
+
+        <!-- (опционально) WebP декодер для ImageIO -->
+        <dependency>
+            <groupId>com.twelvemonkeys.imageio</groupId>
+            <artifactId>imageio-webp</artifactId>
+            <version>3.12.0</version>
         </dependency>
     </dependencies>
 
